--- a/catalogo_computadoras/templates/base.html
+++ b/catalogo_computadoras/templates/base.html
@@ -1,4 +1,4 @@
-{%load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,46 +12,45 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'inicio' %}" style="padding-left: 50px;">
-            <a class="navbar-brand" href="{% url 'inicio' %}"> 
-                <img src="{% static 'logo.png' %}" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;">
+            <img src="{% static 'logo.png' %}" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;">
         </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="{% url 'inicio' %}"> EcoNova Tech</a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Categorias
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="{% url 'productos_categoria' 'laptops' %}">Laptops//Notebooks</a>
-                <a class="dropdown-item" href="{% url 'productos_categoria' 'hardware' %}">Hardware</a>
-                <a class="dropdown-item" href="{% url 'productos_categoria' 'escritorio' %}">Computadoras de escritorio</a>
-              </div>
-            </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'clientes' %}">Clientes <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'compras' %}">Compras</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="{% url 'inicio' %}">EcoNova Tech</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Categorías
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="{% url 'productos_categoria' 'laptops' %}">Laptops/Notebooks</a>
+                        <a class="dropdown-item" href="{% url 'productos_categoria' 'hardware' %}">Hardware</a>
+                        <a class="dropdown-item" href="{% url 'productos_categoria' 'escritorio' %}">Computadoras de escritorio</a>
+                    </div>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'clientes' %}">Clientes <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'compras' %}">Compras</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'acerca_de' %}">Acerca de</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" action="{% url 'buscar_productos' %}" method="get">
+                <input class="form-control mr-sm-2" type="search" name="q" placeholder="Buscar" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+            </form>
+        </div>
     </nav>
 
     <div class="container">
-      {% block content %}
-      {% endblock %}
-  </div>
+        {% block content %}
+        {% endblock %}
+    </div>
 
     {% comment %} Scripts necesarios para menus desplegables  {% endcomment %}
     
