--- a/catalogo_computadoras/templates/base.html
+++ b/catalogo_computadoras/templates/base.html
@@ -30,8 +30,8 @@
                         <a class="dropdown-item" href="{% url 'productos_categoria' 'escritorio' %}">Computadoras de escritorio</a>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'clientes' %}">Clientes <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'clientes' %}">Clientes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'compras' %}">Compras</a>
