--- a/catalogo_computadoras/templates/base.html
+++ b/catalogo_computadoras/templates/base.html
@@ -54,10 +54,10 @@
 
     {% comment %} Scripts necesarios para menus desplegables  {% endcomment %}
     
-    <!-- jQuery (necesario para Bootstrap) -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <!-- Popper.js (necesario para los dropdowns y tooltips) -->
+    <!-- Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
     <!-- Bootstrap JS -->
