--- a/catalogo_computadoras/templates/clientes.html
+++ b/catalogo_computadoras/templates/clientes.html
@@ -12,7 +12,7 @@
                 <th>Email</th>
                 <th>Teléfono</th>
                 <th>Dirección</th>
-                <th>Acciones</th> <!-- Nueva columna para los botones -->
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
